Resolve "Tackle SonarQube issues"